--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,4 +1,5 @@
-.menu-btn {
+//Menu Button
+.menu-btn{
   position: absolute;
   z-index: 3;
   right: 35px;
@@ -6,27 +7,142 @@
   cursor: pointer;
   @include easeOut;
 
-  .btn-line {
+  .btn-line{
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: white;
-
+    background:set-text-color($primary-color);
     @include easeOut;
   }
-  //Rotate into x with menu Lines
+//Rotate into x with menu lines
   &.close{
     transform: rotate(180deg);
-
     .btn-line{
-      //Line 1 - Rotate
+      //Line 1 rotate
       &:nth-child(1){
-      background: red;
+        transform: rotate(45deg) translate(5px , 5px)
       }
-
-      //Line 2 - Hide
-
-      //Line 3 - Rotate
+      //line 2 - hide
+      &:nth-child(2){
+       opacity: 0;
+      }
+      //line 3 -rotate
+      &:nth-child(3){
+        transform: rotate(-45deg) translate(7px ,-6px)
+      }
     }
+  }
+}
+//Menu Overlay
+
+.menu{
+  position: fixed;
+  top:0;
+  width: 100%;
+  opacity: 0.9;
+  visibility: hidden;
+
+  &.show{
+    visibility: visible;
+  }
+  &-branding, &-nav{
+      display: flex;
+      flex-flow: column wrap;
+      align-items: center;
+      justify-content: center;
+      float: left;
+      width: 50%;
+      height: 100vh;
+      overflow: hidden;
+  }
+  &-nav{
+    margin: 0;
+    padding: 0;
+    background: darken($primary-color, 5);
+    list-style: none;
+    transform: translate3d(0,-100%, 0);
+    @include easeOut;
+
+    &.show{
+      //slide in from top
+      transform: translate3d(0,0,0);
+    }
+  }
+
+  //branding 
+  &-branding{
+    background: $primary-color;
+    transform: translate3d(0,100%, 0);
+    @include easeOut;
+
+    &.show{
+       //slide in from top
+       transform: translate3d(0,0,0);
+      
+    }
+.portrait{
+  width: 250px;height: 250px;
+  background: url('../images/background.jpg');
+  border-radius: 50%;
+  border: solid 3px $secondary-color;
+}
+  }
+
+  .nav-item{
+    transform: translate3d(600px, 0 , 0);
+    @include easeOut;
+
+    &.show{
+      transform: translate3d(0,0,0);
+    }
+    &.current > a{
+      color: $secondary-color;
+    }
+  }
+  .nav-link{
+    display: inline-block;
+  position: relative;
+  font-size: 30px;
+  text-transform:uppercase;
+  padding: 1rem 0;
+  font-weight: 300;
+  color:set-text-color($primary-color);
+  text-decoration: none;
+  @include easeOut;
+  &:hover{
+    color: $secondary-color;
+  }
+  }
+  
+ 
+}
+
+//delay each nav item slide by 0.1
+@for $x from 1 through 4{
+  .nav-item:nth-child(#{$x}){
+    transition-delay: $x * 0.1s;
+  }
+}
+
+//media query mixins
+
+@mixin mediaSm{
+  @media screen and (max-width:500px){
+    @content;
+  }
+}
+@mixin mediaMd{
+  @media screen  and (max-width:768px){
+    @content;
+  }
+}
+@mixin mediaLg{
+  @media screen and (min-width:769px) and (max-width:1170px) {
+    @content;
+  }
+}
+@mixin mediaXL{
+  @media screen and (min-width:1171px) {
+    @content;
   }
 }
