--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,37 +1,13 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
-$show-home-image: true;
-$home-image: url(../images/background.jpg);
-$background-opacity: 0.9;
-@mixin easeOut {
-  transition: all 0.5s ease-out;
-}
-@mixin background {
-  @if $show-home-image {
-    &#bg-img {
-      background: $home-image;
-      background-attachment: fixed;
-      background-size: cover;
-      &:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        background: rgba($primary-color, $background-opacity);
-      }
-    }
-  }
-}
+@import 'config';
+@import 'menu';
+
 * {
   box-sizing: border-box;
 }
 body {
   @include background();
   background: $primary-color;
-  color: white;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -68,8 +44,8 @@ header {
 }
 main {
   padding: 4rem;
-  height: 100%;
-
+  //height: 100%;
+min-height: calc(100vh-60px);
   .icons {
     margin-top: 1rem;
     a {
@@ -87,128 +63,48 @@ main {
     }
   }
 }
+.about-info{
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas: 
+  'bioimage bio bio'
+  'job1 job2 job3';
+  grid-template-columns: repeat(3, 1fr);
 
-.menu-btn {
-  position: absolute;
-  z-index: 3;
-  right: 35px;
-  top: 35px;
-  cursor: pointer;
-  @include easeOut;
-
-  .btn-line {
-    width: 28px;
-    height: 3px;
-    margin: 0 0 5px 0;
-    background: white;
-
-    @include easeOut;
+  .bio-image{
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-color 3px solid;
+    width: 250px;
+    height: 200px;
   }
-  //Rotate into x with menu Lines
-  &.close{
-    transform: rotate(180deg);
-
-    .btn-line{
-      //Line 1 - Rotate
-      &:nth-child(1){
-        transform:rotate(45deg) translate(5px, 5px);
-      }
-
-      //Line 2 - Hide
-      &:nth-child(2){
-        opacity: 0;   }
-      //Line 3 - Rotate
-      &:nth-child(3){
-        transform:rotate(-45deg) translate(7px, -6px);
-      }
-    }
+  .bio{
+    grid-area: bio;
+    font-size: 1.5rem;
   }
-}
-// Menu overlay
-.menu{
-  position: fixed;
-  top:0;
-  width: 100%;
-  height: 100%;
-  opacity:0.9;
-  visibility: hidden;
-
-  &.show{
-    visibility: visible;
+  .job{
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom:$secondary-color 5px solid;
   }
-  &-branding,
-  &-nav{
-     display:flex;
-     flex-flow:column wrap;
-     align-items:center;
-     justify-content: center;
-     float: left;
-     width: 50%;
-     height: 100%;
-     overflow: hidden;
+  .job-1{
+    grid-area: job1;
+   
   }
-  &-nav{
-    margin: 0;
-    padding: 0;
-    background: darken($primary-color, 5);
-    list-style: none;
-    transform: translate3d(0,-100%,0);
-  @include easeOut();
-
-  &.show{
-    //slide in fron top
-    transform: translate3d(0,0,0);
+  .job-2{
+    grid-area: job2;
   }
-  }
-
-  //Branding Side
-  &-branding{
-    background: $primary-color;
-    transform: translate3d(0,100%,0);
-    @include easeOut();
-
-    &.show{
-      //slide in from bottom
-      transform: translate3d(0,0,0);
-    }
-    .portrait{
-      width: 250px;
-      height: 250px;
-      background: $home-image;
-      border-radius: 50%;
-      border: solid 3px $secondary-color;
-    }
-    }
-    .nav-item{
-      transform: translate3d(600px,0,0);
-      @include easeOut();
-      &.show{
-        //slide in from bottom
-        transform: translate3d(0,0,0);
-      }
-      &.current > a{
-        color: $secondary-color;
-      }
-    }
-    .nav-link{
-      display: inline-block;
-      position: relative;
-      font-size: 30px;
-      text-transform: uppercase;
-      padding: 1rem 0;
-      font-weight: 300;
-      color: white;
-      text-decoration: none;
-      @include easeOut();
-
-      &:hover{
-        color: $secondary-color;
-      }
-    }
-}
-//Delay each nav item slide by 0.1s
-@for $x from 1 through 4{
-  .nav-item:nth-child(#{$x}){
-    transition-delay: $x * 0.1s;
+  .job-3{
+    grid-area: job3;
   }
 }
+
+#main-footer{
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color:set-text-color($primary-color);
+  height: 60px;
+}
+@import 'mobile';
